# MyServer

./: CMakeLists.txt  test  test.cpp
include/: chat_client.h  chat_server.h  client.h  client_strategy.h  common.h  exception.h  layout.h  player.h  server.h  server_strategy.h  strategy.h  table.h
src/: run_client.cpp  run_server.cpp
src/aux/: common.cpp  exception.cpp
src/client/: chat_client.cpp  client.cpp  layout.cpp  layout_chat.cpp  layout_main.cpp  layout_poker.cpp
src/netspace/client/: chat_client.cpp  client.cpp
src/netspace/server/: chat_server.cpp  server.cpp
src/poker/: player.cpp  table.cpp
src/server/: chat_server.cpp  chat_strategy.cpp  general_strategy.cpp  server.cpp  strategy.cpp
